java11 migration recipe